objects/echosign_dev1__SIGN_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>echosign_dev1__Action_Window_Type__c</fullName>
        <description>Determine how EchoSign windows open in users&apos; browsers. &apos;Window&apos; - Open in a new windows; &apos;Frame&apos; - Open as a layer on top of the Agreement page; Default/Empty: Auto-detect based on the user&apos;s browser capabilities.</description>
        <inlineHelpText>Determine how EchoSign windows open in users&apos; browsers. &apos;Window&apos; - Open in a new windows; &apos;Frame&apos; - Open as a layer on top of the Agreement page; Default/Empty: Auto-detect based on the user&apos;s browser capabilities.</inlineHelpText>
        <label>Action Window Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Add_Audit_PDF_to_Attachment_List__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting controls whether a PDF of the audit trail is attached to the Agreement record after an agreement is signed.</description>
        <inlineHelpText>This setting controls whether a PDF of the audit trail is attached to the Agreement record after an agreement is signed.</inlineHelpText>
        <label>Add Audit PDF to Attachment List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Add_Signed_PDF_Link_to_Agreement__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This setting applies only for pushed agreements sent outside of Salesforce.  Enable this setting to add a link for signed PDF to the Agreement record.</description>
        <inlineHelpText>This setting applies only for pushed agreements sent outside of Salesforce.  Enable this setting to add a link for signed PDF to the Agreement record.</inlineHelpText>
        <label>Add Signed PDF Link for Pushed Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Add_Signed_PDF_Separate_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting controls whether the signed agreement is attached to the agreement record as separate PDFs. To stop receiving the signed agreement as a merged PDF, please contact EchoSign Support.</description>
        <inlineHelpText>This setting controls whether the signed agreement is attached to the agreement record as separate PDFs. To stop receiving the signed agreement as a merged PDF, please contact EchoSign Support.</inlineHelpText>
        <label>Add Signed PDF as Separate Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Add_Signed_PDF_to_Attachment_List__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This setting applies to agreements sent from outside of Salesforce and pushed into Salesforce. Enable this setting to attach the signed PDF to the Agreement record.</description>
        <inlineHelpText>This setting applies to agreements sent from outside of Salesforce and pushed into Salesforce. Enable this setting to attach the signed PDF to the Agreement record.</inlineHelpText>
        <label>Add Signed PDF for Pushed Agreements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Add_Supporting_PDF_to_Attachment_List__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting controls whether PDF versions of any supporting documents uploaded by signers are attached to the Agreement record after an agreement is signed.</description>
        <inlineHelpText>This setting controls whether PDF versions of any supporting documents uploaded by signers are attached to the Agreement record after an agreement is signed.</inlineHelpText>
        <label>Add Supporting Files to Attachment List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Allow_Delegated_Sending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to allow sending agreements on behalf of other users.</description>
        <inlineHelpText>Enable this setting to allow sending agreements on behalf of other users.</inlineHelpText>
        <label>Allow Sending On Behalf of Others</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Auto_Sync_Group_Mappings__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to automatically move users to the correct EchoSign groups when their Salesforce user profiles are updated.</description>
        <inlineHelpText>Enable this setting to automatically move users to the correct EchoSign groups when their Salesforce user profiles are updated.</inlineHelpText>
        <label>Auto-Sync Group Mappings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Callback_URL_EchoSign_to_Salesforce_Site__c</fullName>
        <description>This setting is the Secure Web Address copied from the EchoSign Callback Site which is set up to send large agreements transactions over 2.8MB.  Follow instructions in the installation and configuration guide.</description>
        <inlineHelpText>This setting is the Secure Web Address copied from the EchoSign Callback Site which is set up to send large agreements transactions over 2.8MB.  Follow instructions in the installation and configuration guide.</inlineHelpText>
        <label>Callback URL EchoSign to Salesforce Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Account_Lookup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the account lookup option for draft agreements.</description>
        <inlineHelpText>Enable this setting to hide the account lookup option for draft agreements.</inlineHelpText>
        <label>Hide Account Lookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Add_Recipient__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the add recipient option for draft agreements.</description>
        <inlineHelpText>Enable this setting to hide the add recipient option for draft agreements.</inlineHelpText>
        <label>Hide Add Recipient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Agreement_Chatter_Feed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to turn off the Chatter feed on the Agreement object.</description>
        <inlineHelpText>Enable this setting to turn off the Chatter feed on the Agreement object.</inlineHelpText>
        <label>Disable Agreement Chatter Feed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Attach_Agreement_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the option to add Salesforce Documents to draft agreements.</description>
        <inlineHelpText>Enable this setting to hide the option to add Salesforce Documents to draft agreements.</inlineHelpText>
        <label>Hide Salesforce Documents Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Cc__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the &apos;Send email copies to:&apos; field for draft agreements.</description>
        <inlineHelpText>Enable this setting to hide the &apos;Send email copies to:&apos; field for draft agreements.</inlineHelpText>
        <label>Hide Send Email Copies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Contact_Recipient_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting controls whether users can use Contact records as Recipients on Agreements.</description>
        <inlineHelpText>This setting controls whether users can use Contact records as Recipients on Agreements.</inlineHelpText>
        <label>Disable Contact Recipient Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Content_Agreement_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the option to add Salesforce Content or Files to draft agreements.</description>
        <inlineHelpText>Enable this setting to hide the option to add Salesforce Content or Files to draft agreements.</inlineHelpText>
        <label>Hide Salesforce Content/Files Att.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Delete_Agreement_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the delete option for attachments associated with draft agreements.</description>
        <inlineHelpText>Enable this setting to hide the delete option for attachments associated with draft agreements.</inlineHelpText>
        <label>Hide Delete Agreement Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Delete_Recipient__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the delete recipient option for draft agreements.</description>
        <inlineHelpText>Enable this setting to hide the delete recipient option for draft agreements.</inlineHelpText>
        <label>Hide Delete Recipient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Edit_Agreement_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the edit option for attachments associated with draft agreements.</description>
        <inlineHelpText>Enable this setting to hide the edit option for attachments associated with draft agreements.</inlineHelpText>
        <label>Hide Edit Agreement Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Email_Recipient_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting controls whether users can type in manual Email addresses as Recipients on Agreements.</description>
        <inlineHelpText>This setting controls whether users can type in manual Email addresses as Recipients on Agreements.</inlineHelpText>
        <label>Disable Email Recipient Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Knowledge_Based_Authentication__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable this setting to hide the Knowledge Based Authentication (KBA) option for agreements. Powered by RSA, KBA requires signers to provide and verify personal information to sign the document. Usage of this feature is limited and may incur added costs.</description>
        <inlineHelpText>Enable this setting to hide the Knowledge Based Authentication (KBA) option for agreements. Powered by RSA, KBA requires signers to provide and verify personal information to sign the document. Usage of this feature is limited and may incur added costs.</inlineHelpText>
        <label>Disable Knowledge Based Authentication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Layer_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the link which allows senders to &quot;Add Form Field Template&quot; on draft documents.</description>
        <inlineHelpText>Enable this setting to hide the link which allows senders to &quot;Add Form Field Template&quot; on draft documents.</inlineHelpText>
        <label>Hide Ability to Add Field Templates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Lead_Recipient_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting controls whether users can use Lead records as Recipients on Agreements.</description>
        <inlineHelpText>This setting controls whether users can use Lead records as Recipients on Agreements.</inlineHelpText>
        <label>Disable Lead Recipient Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Opportunity_Lookup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the opportunity lookup option for draft agreements.</description>
        <inlineHelpText>Enable this setting to hide the opportunity lookup option for draft agreements.</inlineHelpText>
        <label>Hide Opportunity Lookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Preview_Position__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the preview or position option for draft agreements.</description>
        <inlineHelpText>Enable this setting to hide the preview or position option for draft agreements.</inlineHelpText>
        <label>Hide Preview or Position</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Replace_Signer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the ability to replace the current signer or approver after the agreement has been sent.</description>
        <inlineHelpText>Enable this setting to hide the ability to replace the current signer or approver after the agreement has been sent.</inlineHelpText>
        <label>Hide Replace Signer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Sender_Signs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the sender signs option for draft agreements.</description>
        <inlineHelpText>Enable this setting to hide the sender signs option for draft agreements.</inlineHelpText>
        <label>Hide Sender Signs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Sign_Expiration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the signing deadline option for draft agreements.</description>
        <inlineHelpText>Enable this setting to hide the signing deadline option for draft agreements.</inlineHelpText>
        <label>Hide Sign Expiration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Sign_Password__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the signing password option.</description>
        <inlineHelpText>Enable this setting to hide the signing password option.</inlineHelpText>
        <label>Hide Signing Password</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Sign_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the sign reminder option for draft agreements.</description>
        <inlineHelpText>Enable this setting to hide the sign reminder option for draft agreements.</inlineHelpText>
        <label>Hide Sign Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Signature_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the signature type option for draft agreements.</description>
        <inlineHelpText>Enable this setting to hide the signature type option for draft agreements.</inlineHelpText>
        <label>Hide Signature Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Sort_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the sort attachments option for draft agreements.</description>
        <inlineHelpText>Enable this setting to hide the sort attachments option for draft agreements.</inlineHelpText>
        <label>Hide Reorder Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Sort_Recipients__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the sort recipients option for draft agreements.</description>
        <inlineHelpText>Enable this setting to hide the sort recipients option for draft agreements.</inlineHelpText>
        <label>Hide Reorder Recipients</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Upload_Agreement_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the option to upload local files for draft agreements.</description>
        <inlineHelpText>Enable this setting to hide the option to upload local files for draft agreements.</inlineHelpText>
        <label>Hide Upload Agreement Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_User_Recipient_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting controls whether users can use User records as Recipients on Agreements.</description>
        <inlineHelpText>This setting controls whether users can use User records as Recipients on Agreements.</inlineHelpText>
        <label>Disable User Recipient Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_View_Agreement_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the view option for attachments associated with draft agreements.</description>
        <inlineHelpText>Enable this setting to hide the view option for attachments associated with draft agreements.</inlineHelpText>
        <label>Hide View Agreement Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_View_Password__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the password protection option for signed PDFs.</description>
        <inlineHelpText>Enable this setting to hide the password protection option for signed PDFs.</inlineHelpText>
        <label>Hide Password for Signed PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Web_Identity__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable this setting to hide the Social Identity option for agreements.  Social Identity verification requires signers to verify their identity by signing in to one of the following sites: Facebook, Google, LinkedIn, Twitter, Yahoo! or Microsoft Live.)</description>
        <inlineHelpText>Enable this setting to hide the Web Identity option for agreements.  Web Identity verification requires signers to verify their identity by signing in to one of the following sites: Facebook, Google, LinkedIn, Twitter, Yahoo! or Microsoft Live.)</inlineHelpText>
        <label>Disable Social Identity Verification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Enable_Hosted_Signing_Field__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enables the host signing option to obtain in-person signatures</description>
        <inlineHelpText>Enables the host signing option to obtain in-person signatures</inlineHelpText>
        <label>Show Hosted Signing Option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Enable_Layers_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to show the EchoSign form field layer templates that will be applied to documents.</description>
        <inlineHelpText>Enable this setting to show the EchoSign form field layer templates that will be applied to documents.</inlineHelpText>
        <label>Show EchoSign Field Templates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Enable_Library_Agreement_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to show the option to add EchoSign document templates.</description>
        <inlineHelpText>Enable this setting to show the option to add EchoSign document templates.</inlineHelpText>
        <label>Show EchoSign Library Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Enable_Mapping_Error_Notification__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable this setting to send the Salesforce admin email notifications when there are merge mapping or data mapping execution errors.</description>
        <inlineHelpText>Enable this setting to send the Salesforce admin email notifications when there are merge mapping or data mapping execution errors.</inlineHelpText>
        <label>Enable Mapping Error Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Enable_Phone_Authentication__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to show the phone authentication option for verifying recipient identity.  Usage of this feature is limited and may incur added costs.</description>
        <inlineHelpText>Enable this setting to show the phone authentication option for verifying recipient identity.  Usage of this feature is limited and may incur added costs.</inlineHelpText>
        <label>Enable Phone Authentication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Enable_Recipient_Approver_Role__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Recipients marked as approvers review and approve the document but they are not required to sign it. They may be required to enter data into fields.</description>
        <inlineHelpText>Recipients marked as approvers review and approve the document but they are not required to sign it. They may be required to enter data into fields.</inlineHelpText>
        <label>Enable Recipient Approver Role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Enable_Recipient_Security_Options__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to allow each signer to have a different identity verification method. (e.g. password, phone, social identity, KBA)</description>
        <inlineHelpText>Enable this setting to allow each signer to have a different identity verification method. (e.g. password, phone, social identity, KBA)</inlineHelpText>
        <label>Enable Per Signer Identity Verification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Enable_Recipient_Signing_Order_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to show 2 options for recipient signing: serial (ordered entered) or parallel (in any order)</description>
        <inlineHelpText>Enable this setting to show 2 options for recipient signing: serial (ordered entered) or parallel (in any order)</inlineHelpText>
        <label>Show Recipient Signing Order Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Enable_Send_Written_Signature_To_Fax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>By default send written signature to fax is disabled. Check this box to enable this feature.</description>
        <inlineHelpText>By default send written signature to fax is disabled. Check this box to enable this feature.</inlineHelpText>
        <label>Enable Send Written Signature To Fax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Enable_Separate_Signer_Identity_Methods__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to allow different verification methods (KBA, web identity, password) to be selected for signers internal or external to your EchoSign account.</description>
        <inlineHelpText>Enable this setting to allow different verification methods (KBA, web identity, password) to be selected for signers internal or external to your EchoSign account.</inlineHelpText>
        <label>Enable Separate Signer Identity Methods</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Override_Recipient_Field_List__c</fullName>
        <description>This setting will override the list of recipients in an agreement. Specify the full API name of the fields on the agreement record where recipients should be read from, in order and separated by commas. (e.g. SignerA_Email__c, SignerB_Email__c)</description>
        <inlineHelpText>This setting will override the list of recipients in an agreement. Specify the full API name of the fields on the agreement record where recipients should be read from, in order and separated by commas. (e.g. SignerA_Email__c, SignerB_Email__c)</inlineHelpText>
        <label>Override Recipient Field List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Read_Only_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to make the Account field a read-only agreement field.</description>
        <inlineHelpText>Enable this setting to make the Account field a read-only agreement field.</inlineHelpText>
        <label>Read Only Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Read_Only_Agreement_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to make the Agreement Name field a read-only agreement field.</description>
        <inlineHelpText>Enable this setting to make the Agreement Name field a read-only agreement field.</inlineHelpText>
        <label>Read Only Agreement Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Read_Only_Cc__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to make the &quot;Send email copies to&quot; field a read-only agreement field.</description>
        <inlineHelpText>Enable this setting to make the &quot;Send email copies to&quot; field a read-only agreement field.</inlineHelpText>
        <label>Read Only Email Copies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Read_Only_Field_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to make the Additional Fields section read-only on an agreement.</description>
        <inlineHelpText>Enable this setting to make the Additional Fields section read-only on an agreement.</inlineHelpText>
        <label>Read Only Field Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Read_Only_Hosted_Signing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to make the Hosted Signing checkbox a read-only agreement field.</description>
        <inlineHelpText>Enable this setting to make the Hosted Signing checkbox a read-only agreement field.</inlineHelpText>
        <label>Read Only Hosted Signing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Read_Only_Language__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to make the Language field a read-only agreement field.</description>
        <inlineHelpText>Enable this setting to make the Language field a read-only agreement field.</inlineHelpText>
        <label>Read Only Language</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Read_Only_Message__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to make the Message field a read-only agreement field.</description>
        <inlineHelpText>Enable this setting to make the Message field a read-only agreement field.</inlineHelpText>
        <label>Read Only Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Read_Only_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to make the Opportunity lookup field a read-only agreement field.</description>
        <inlineHelpText>Enable this setting to make the Opportunity lookup field a read-only agreement field.</inlineHelpText>
        <label>Read Only Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Read_Only_Preview_Position__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to make the &quot;Preview document or position signature fields&quot; checkbox a read-only agreement field.</description>
        <inlineHelpText>Enable this setting to make the &quot;Preview document or position signature fields&quot; checkbox a read-only agreement field.</inlineHelpText>
        <label>Read Only Preview or Position</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Read_Only_Recipient_Signing_Order_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to make the options for recipient signing order read-only on an agreement</description>
        <inlineHelpText>Enable this setting to make the options for recipient signing order read-only on an agreement</inlineHelpText>
        <label>Read Only Recipient Signing Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Read_Only_Recipient__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to make the Recipients section read-only on an agreement.</description>
        <inlineHelpText>Enable this setting to make the Recipients section read-only on an agreement.</inlineHelpText>
        <label>Read Only Recipient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Read_Only_Security_Options__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to make the Security Options section read-only on an agreement.</description>
        <inlineHelpText>Enable this setting to make the Security Options section read-only on an agreement.</inlineHelpText>
        <label>Read Only Security Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Read_Only_Sender_Signs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to make the &quot;I also need to sign this document&quot; checkbox a read-only agreement field.</description>
        <inlineHelpText>Enable this setting to make the &quot;I also need to sign this document&quot; checkbox a read-only agreement field.</inlineHelpText>
        <label>Read Only Sender Signs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Read_Only_Sign_Expiration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to make the &quot;Allow signers X days to sign this document.&quot; a read-only agreement field.</description>
        <inlineHelpText>Enable this setting to make the &quot;Allow signers X days to sign this document.&quot; a read-only agreement field.</inlineHelpText>
        <label>Read Only Sign Expiration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Read_Only_Sign_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to make the &quot;Remind recipient to sign&quot; checkbox a read-only agreement field.</description>
        <inlineHelpText>Enable this setting to make the &quot;Remind recipient to sign&quot; checkbox a read-only agreement field.</inlineHelpText>
        <label>Read Only Sign Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Read_Only_Signature_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to make the Signature Type field a read-only agreement field.</description>
        <inlineHelpText>Enable this setting to make the Signature Type field a read-only agreement field.</inlineHelpText>
        <label>Read Only Signature Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Rename_Agreement_Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Rename the agreement using the name of the attached document</description>
        <inlineHelpText>Rename the agreement using the name of the attached document</inlineHelpText>
        <label>Rename Agreement with Attachment Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Wipe_Agreement_Password__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable this setting to wipe the encrypted password field on the agreement after it is sent.</description>
        <inlineHelpText>Enable this setting to wipe the encrypted password field on the agreement after it is sent.</inlineHelpText>
        <label>Wipe Agreement Password</label>
        <type>Checkbox</type>
    </fields>
    <label>EchoSign Settings</label>
</CustomObject>